--- a/templates/interview.html
+++ b/templates/interview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SciBox Interview - Собеседование</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
     <div class="container">
@@ -123,4 +123,5 @@ function solution() {
         }
     </script>
 </body>
+
 </html>
