--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
                 alert('Пожалуйста, выберите направление собеседования');
                 return;
             }
-            window.location.href = 'interview.html';
+            window.location.href = 'interview';
         }
     </script>
 </body>
