--- a/templates/interview.html
+++ b/templates/interview.html
@@ -118,7 +118,7 @@ function solution() {
         
         function endInterview() {
             if (confirm('Завершить собеседование?')) {
-                window.location.href = 'results.html';
+                window.location.href = 'results';
             }
         }
     </script>
