--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
         </header>
 
         <div class="results-header">
-            <h1>Собеседование завершено! 🎉</h1>
+            <h1>Собеседование завершено!</h1>
             <p>Ваши результаты обработаны AI-системой</p>
         </div>
 
@@ -87,7 +87,7 @@
 
     <script>
         function goHome() {
-            window.location.href = 'index.html';
+            window.location.href = 'index';
         }
         
         function exportResults() {
@@ -97,3 +97,4 @@
 </body>
 
 </html>
+
