--- a/templates/results.html
+++ b/templates/results.html
@@ -76,7 +76,7 @@
     <script>
         // ФУНКЦИИ
         function goHome() {
-            window.location.href = "{{ url_for('index') }}";
+            window.location.href = "/";
         }
 
         function exportResults() {
@@ -255,3 +255,4 @@ const getChartData = () => {
     </script>
 </body>
 </html>
+
