--- a/templates/results.html
+++ b/templates/results.html
@@ -87,7 +87,7 @@
 
     <script>
         function goHome() {
-            window.location.href = 'index';
+            window.location.href = '/';
         }
         
         function exportResults() {
