--- a/templates/interview.html
+++ b/templates/interview.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SciBox Interview - Собеседование</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
