--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <header class="header">
             <div class="logo">SciBox Interview</div>
+            <button class="admin-btn" onclick="goToAdmin()">Я админ</button>
         </header>
 
         <main class="welcome-section">
@@ -75,7 +76,12 @@
             }
             window.location.href = 'interview';
         }
+        
+        function goToAdmin() {
+        window.location.href = "/admin";
+      }
     </script>
 </body>
 </html>
+
 
